--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,11 @@
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>rodeo.agile.impress.pos.LoginServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>MenuServlet</servlet-name>
+        <servlet-class>rodeo.agile.impress.pos.MenuServlet</servlet-class>
+    </servlet>
+    
     <servlet-mapping>
         <servlet-name>StockServlet</servlet-name>
         <url-pattern>/stocks</url-pattern>
@@ -18,5 +23,9 @@
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MenuServlet</servlet-name>
+        <url-pattern>/menu</url-pattern>
     </servlet-mapping>
 </web-app>
